corrections design and align columns by label and button #299

--- a/src/components/list/List.scss
+++ b/src/components/list/List.scss
@@ -53,6 +53,7 @@
 
 .loading-table-row {
   opacity: 0.75;
+  border: solid;
 }
 
 .without-pointer-cursor {
@@ -75,7 +76,9 @@
 // }
 // .cellhovered {
 // }
-
+.header-cell-container {
+  cursor: pointer;
+}
 .data-list-count-stats {
   justify-content: flex-end;
   display: flex;
@@ -87,6 +90,7 @@
   background-color: inherit;
   border: none;
   margin-left: 2px;
+  cursor: pointer;
 }
 
 @media screen and (max-width: 768px) {
